--- a/pallas template/css/layout.css
+++ b/pallas template/css/layout.css
@@ -327,6 +327,7 @@ ul.slimmenu.collapsed li > ul {
 .white-background {
 	background-color:#fff;
 }
+
 .grey-background {
 	background-color:#f9f9f9;
 }
@@ -355,7 +356,6 @@ ul.slimmenu.collapsed li > ul {
 	color:#999999;
 	letter-spacing:3px;
 	text-align:center;
-    text-transform: capitalize;
 	padding-bottom:20px;
 }
 .section-header-text .line-header{
@@ -385,7 +385,6 @@ ul.slimmenu.collapsed li > ul {
 	color:#999999;
 	letter-spacing:3px;
 	text-align:left;
-    text-transform: capitalize;
 	padding-bottom:20px;
 }
 .section-header-text-left .line-header{
@@ -1402,6 +1401,7 @@ a.scroll-down.scroll-yt {
 	letter-spacing:2px;
 	font-weight:600;
 	padding-top:15px;
+	
 }
 
 
@@ -1662,6 +1662,7 @@ a.scroll-down.scroll-yt {
 	max-width:850px;
 	margin:0 auto;
 	font-size: 18px;
+	margin-bottom: 50px;
 }
 
 
