arreglo link portafolio, img fonde contacto, elimine iconos de redes sociales de  footer

--- a/pallas template/css/layout.css
+++ b/pallas template/css/layout.css
@@ -2901,7 +2901,7 @@ a.scroll-down.scroll-yt {
 	top:0;
 	left:0;
 	z-index:-1;
-	background:url('../images/patt.png');
+	background-color:#F8D470;
 }
 
 
