--- a/pallas template/css/layout.css
+++ b/pallas template/css/layout.css
@@ -1979,7 +1979,9 @@ a.scroll-down.scroll-yt {
 
 
 .image-auto-wraper{
-	position:relative;
+	display: flex;
+	flex-direction: row;
+justify-content: center;
 	width:100%;
 	overflow:hidden;
 } 
@@ -1988,8 +1990,7 @@ a.scroll-down.scroll-yt {
 	height:auto;
 	align-content: center;
 	display:block;
-	margin-left: 200px;
-	margin-bottom: 40px;
+	
 } 
 
 
@@ -3011,7 +3012,7 @@ a.scroll-down.scroll-yt {
 ================================================== */
 
 
-
+/* RESPONSIVE */
 @media only screen and (max-width: 1200px) {
 .logo{
 	width:80px;
@@ -3202,6 +3203,7 @@ ul.slimmenu li > ul {
 }
 }
 
+/* CELULAR */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
 .portfolio-box-1{
 	width:100%;
@@ -3215,6 +3217,21 @@ ul.slimmenu li > ul {
 .portfolio-box-1.box-half{
 	width:100%;
 }
+
+.image-auto-wraper{
+	display: flex;
+	flex-direction: row;
+justify-content: center;
+	width:100%;
+	overflow:hidden;
+} 
+.image-auto-wraper img{
+	width:450px;
+	height:auto;
+	align-content: center;
+	display:block;
+	
+} 
 }
 
 @media only screen and (max-width: 319px) {
